--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "impostor-game"
+name = "imposter-game"
 version = "0.1.0"
 description = ""
 authors = ["Eugene <giveuper39@gmail.com>"]
